--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>common</module>
         <module>pii</module>
+        <module>enricher</module>
     </modules>
 
     <properties>
@@ -23,7 +24,7 @@
         <scala.version>2.12.15</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <flink.version>1.17.1</flink.version>
-        <iceberg.version>1.3.1</iceberg.version>
+        <iceberg.version>1.3.0</iceberg.version>
         <jackson.version>2.13.4</jackson.version>
         <kafka.version>3.2.3</kafka.version>
     </properties>
@@ -46,7 +47,7 @@
             <dependency>
                 <groupId>com.insite</groupId>
                 <artifactId>common</artifactId>
-                <version>${project.version}i</version>
+                <version>${project.version}</version>
             </dependency>
 
             <!-- Scala -->
@@ -107,12 +108,22 @@
             <!-- Iceberg -->
             <dependency>
                 <groupId>org.apache.iceberg</groupId>
-                <artifactId>iceberg-flink-runtime-${scala.binary.version}</artifactId>
+                <artifactId>iceberg-flink</artifactId>
                 <version>${iceberg.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.iceberg</groupId>
                 <artifactId>iceberg-core</artifactId>
+                <version>${iceberg.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.iceberg</groupId>
+                <artifactId>iceberg-api</artifactId>
+                <version>${iceberg.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.iceberg</groupId>
+                <artifactId>iceberg-data</artifactId>
                 <version>${iceberg.version}</version>
             </dependency>
 
